--- a/style.css
+++ b/style.css
@@ -14,17 +14,13 @@ h2 {
 }
 
 .quizlink{
-    position: relative;
-    top: -200;
-    left: 600;
+    text-align: center;
     font-size: xx-large;
     font-family: 'Ubuntu';
 }
 
 .newslink{
-    position: relative;
-    top: -100;
-    left: 245;
+    text-align: center;
     font-size: xx-large;
     font-family: 'Ubuntu';
 }
@@ -35,9 +31,11 @@ h2 {
 
 body {
     background-color: rgb(8, 210, 250);
+    text-align: center;
 }
 
 #logo{
     width: 100px;
     height: 100px;
+    border-radius: 50px;
 }
