--- a/AJ/CSS/style.css
+++ b/AJ/CSS/style.css
@@ -1,3 +1,12 @@
 * {
     margin: 0px;
 }
+body {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #000000;
+    margin: 0;
+    padding: 0;
+    overscroll-behavior: none;
+  }
