--- a/newstyle.css
+++ b/newstyle.css
@@ -38,3 +38,27 @@ img {
 .article {
     text-align: left;
 }
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    font-family: Ubuntu;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #04aa6d;
+    color: white;
+  }  
