--- a/dinostyle.css
+++ b/dinostyle.css
@@ -37,14 +37,14 @@
     100%{left: -40px;}
 }
 .topnav {
-    background-color: #333;
+    /* background-color: #333; */
     overflow: hidden;
     font-family: Ubuntu;
   }
   
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
