--- a/newstyle.css
+++ b/newstyle.css
@@ -39,14 +39,14 @@ img {
     text-align: left;
 }
 .topnav {
-    background-color: #333;
+    /* background-color: #333; */
     overflow: hidden;
     font-family: Ubuntu;
   }
   
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
