--- a/quizstyle.css
+++ b/quizstyle.css
@@ -25,14 +25,14 @@ img {
     height: auto;
   }  
   .topnav {
-    background-color: #333;
+    /* background-color: #333; */
     overflow: hidden;
     font-family: Ubuntu;
   }
   
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -47,4 +47,4 @@ img {
   .topnav a.active {
     background-color: #04aa6d;
     color: white;
-  }
+  }  
