--- a/AJ/CSS/style.css
+++ b/AJ/CSS/style.css
@@ -17,6 +17,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 8pt;
 }
 header a {
     text-align: center;
