--- a/AJ/CSS/style.css
+++ b/AJ/CSS/style.css
@@ -10,7 +10,7 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    width: 100vmax;
+    /* width: 100vmax; */
 }
 header {
     overflow: hidden;
