new update - tweaks + story competition
- introduced story comp
- added github to about me
- edited index

--- a/newstyle.css
+++ b/newstyle.css
@@ -62,3 +62,8 @@ img {
     background-color: #04aa6d;
     color: white;
   }  
+
+.contentlink{
+    text-align: center;
+    font-size: xx-large;
+}
